improving README and fix post on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,6 +62,7 @@
  body {
   min-height: 100vh;
   height: 100%;
+  width: 100%;
   min-height: -webkit-fill-available;
 }
 
@@ -72,6 +73,7 @@
 html {
   min-height: 100vh;
   height: 100%;
+  width: 100%;
   min-height: -webkit-fill-available;
 }
 
